force-app/main/default/objects/ARTL_Integration_LOV_Mapping__mdt/ARTL_Integration_LOV_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ARTL Integration LOV Mapping</label>
    <pluralLabel>ARTL Integration LOV Mappings</pluralLabel>
</CustomObject>