force-app/main/default/objects/ARTL_Integration_LOV_Mapping__mdt/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <label>Source Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>