force-app/main/default/objects/ARTL_Integration_LOV_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owning Cost Center</fullName>
                <default>true</default>
                <label>Owning Cost Center</label>
            </value>
            <value>
                <fullName>Revenue Receiving Cost Center</fullName>
            </value>
            <value>
                <fullName>Franchise Code</fullName>
            </value>
            <value>
                <fullName>Currency Code</fullName>
            </value>
            <value>
                <fullName>Country Code</fullName>
            </value>
            <value>
                <fullName>Bill Dispatch Method</fullName>
            </value>
            <value>
                <fullName>Bill Frequency</fullName>
            </value>
            <value>
                <fullName>Account Segment</fullName>
            </value>
            <value>
                <fullName>Market Code - Business Account.Circle</fullName>
            </value>
            <value>
                <fullName>Bill Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>